flux/clusters/kind/network-policies/flux-system.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: flux-system
  namespace: flux-system
specs:
  - nodeSelector:
      matchLabels: {}
    egress:
    - toEndpoints:
      - matchLabels:
          io.cilium.k8s.policy.serviceaccount: kustomize-controller
      - matchLabels:
          io.cilium.k8s.policy.serviceaccount: notification-controller
      - matchLabels:
          io.cilium.k8s.policy.serviceaccount: helm-controller
      toPorts:
      - ports:
        - port: '9440'
          protocol: TCP
  - nodeSelector:
      matchLabels: {}
    egress:
    - toEndpoints:
      - matchLabels:
          io.cilium.k8s.policy.serviceaccount: source-controller
      toPorts:
      - ports:
        - port: '9440'
          protocol: TCP
      - ports:
        - port: '9090'
          protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.policy.serviceaccount: source-controller
    ingress:
    - fromEntities:
      - host
      toPorts:
      - ports:
        - port: '9440'
          protocol: TCP
        - port: '9090'
          protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.policy.serviceaccount: kustomize-controller
    ingress:
    - fromEntities:
      - host
      toPorts:
      - ports:
        - port: '9440'
          protocol: TCP
    egress:
    - toEndpoints:
      - matchLabels:
          io.cilium.k8s.policy.serviceaccount: notification-controller
      toPorts:
      - ports:
        - port: '9090'
          protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.policy.serviceaccount: notification-controller
    ingress:
    - fromEntities:
      - host
      toPorts:
      - ports:
        - port: '9440'
          protocol: TCP
    - fromEndpoints:
      - matchLabels:
          io.cilium.k8s.policy.serviceaccount: kustomize-controller
      toPorts:
      - ports:
        - port: '9090'
          protocol: TCP
  - endpointSelector:
      matchLabels:
        io.cilium.k8s.policy.serviceaccount: helm-controller
    ingress:
    - fromEntities:
      - host
      toPorts:
      - ports:
        - port: '9440'
          protocol: TCP
